--- a/index.html
+++ b/index.html
@@ -157,12 +157,9 @@
               <p className="text-xl font-light max-w-3xl mx-auto">
                 Innovating at the intersection of AI and mobile technology to solve real-world challenges with Flutter, React-Native, and Machine Learning.
               </p>
-              <a
-                href="Osama_Safdar_Resume.pdf"
-                download
-                className="mt-6 inline-block px-8 py-3 bg-white text-blue-600 font-semibold rounded-lg shadow-md hover:bg-blue-100 transition"
-                aria-label="Download resume"
-              >
+              <a href="Osama_Safdar_Resume.docx" download className="mt-6 inline-block px-8 py-3 bg-white text-blue-600 font-semibold rounded-lg shadow-md hover:bg-blue-100 transition" aria-label="Download resume">
+  		Download Resume
+		</a>
                 Download Resume
               </a>
             </div>
